--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -29,7 +29,7 @@
                                              alt="{{ wallet.currency.name }}" height="20">
                                     </li>
                                     <li class="list-inline-item">
-                                        <h5>{{ wallet.currency }} - {{ wallet.formatted_balance }}</h5>
+                                        <h5>{{ wallet.currency }} - {{ wallet.balance }}</h5>
                                     </li>
                                     <li class="list-inline-item">
                                         <h5>$ </h5>
