--- a/templates/wallet/wallet.html
+++ b/templates/wallet/wallet.html
@@ -8,22 +8,36 @@
 {% endblock %}
 {% block content %}
     <div class="row">
-        <div class="col-xl-5">
+        <div class="col-xl-12">
             <div class="card">
                 <div class="card-body">
-                    <div class="d-flex">
-                        <div class="flex-shrink-0 me-4">
-                            <i class="mdi mdi-account-circle text-primary h1"></i>
-                        </div>
-                        <div class="flex-grow-1">
-                            <div class="text-muted">
-                                <h5>{{ user.username }}</h5>
-                                <p class="mb-1">{{ user.email }}</p>
-                                <p class="mb-0">Id no: #B4Y000{{ user.id }}</p>
+                    <h4 class="card-title mb-3">Currency rates</h4>
+                    <div class="row border-top">
+
+                        {% for exchange_rate in exchange_rates %}
+                            <div class="col-xl-2 p-1">
+                                <div class="card d-flex flex-column align-items-center mb-1 mt-3">
+                                    <img class="img-fluid m-2" width="30"
+                                         src="{{ exchange_rate.currency.currency_image.url }}"
+                                         alt="{{ exchange_rate.currency.name }}">
+                                    <h5 class="card-title mb-1">{{ exchange_rate.currency.name }}</h5>
+                                    <p class="mb-0">$ {{ exchange_rate.rate }}</p>
+                                    <p class="mb-3">
+                                        <small class="text-muted"> 24H: {{ exchange_rate.price_change }}
+                                            ( {{ exchange_rate.percent_change_1h }} % )</small>
+                                    </p>
+                                </div>
                             </div>
-                        </div>
+                        {% endfor %}
+
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xl-5">
+            <div class="card">
                 <div class="card-body border-top">
                     <div class="row">
                         <div class="col-sm-8">
@@ -37,7 +51,6 @@
                                         </li>
                                         <li class="list-inline-item">
                                             <h5>{{ balance_data.currency }} {{ balance_data.balance }}</h5>
-
                                         </li>
                                         <li class="list-inline-item">
                                             <span> ($ {{ balance_data.usdt_equivalent|floatformat:2 }})</span>
@@ -65,9 +78,10 @@
                                         <i class="bx bx-import"></i>
                                     </div>
                                     <p class="text-muted mb-2">Deposit</p>
-                                    <h5>$ 1054.32</h5>
+                                    <h5>$ {{ total_usd_replenishment|floatformat:2 }}</h5>
                                     <div class="mt-3">
-                                        <a href="javascript: void(0);" class="btn btn-primary btn-sm w-md">Deposit</a>
+                                        <a href="{% url 'replenishment' %}"
+                                           class="btn btn-primary btn-sm w-md">Deposit</a>
                                     </div>
                                 </div>
                             </div>
@@ -77,9 +91,10 @@
                                         <i class="bx bx-wallet"></i>
                                     </div>
                                     <p class="text-muted mb-2">Withdraw</p>
-                                    <h5>$ 824.34</h5>
+                                    <h5>$ {{ total_usd_withdrawal|floatformat:2 }}</h5>
                                     <div class="d-block mt-3">
-                                        <a href="javascript: void(0);" class="btn btn-primary btn-sm w-md">Withdraw</a>
+                                        <a href="{% url 'withdrawal' %}"
+                                           class="btn btn-primary btn-sm w-md">Withdraw</a>
                                     </div>
                                 </div>
                             </div>
@@ -91,7 +106,8 @@
         <div class="col-xl-7">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="card-title mb-4">Balance of all currencies ($ USD {{ total_usdt_balance|floatformat:2 }})</h4>
+                    <h4 class="card-title mb-4">Balance of all currencies ($
+                        USD {{ total_usdt_balance|floatformat:2 }})</h4>
 
 
                     <div id="balance-chart"
@@ -106,17 +122,6 @@
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title mb-4">Activities</h4>
-                    <ul class="nav nav-tabs nav-tabs-custom">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">All</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Deposit</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Withdraw</a>
-                        </li>
-                    </ul>
                     <div class="mt-4">
                         <div class="table-responsive">
                             <table id="datatable" class="table table-hover dt-responsive nowrap"
