--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,13 +1,11 @@
 {% extends './base.html' %}
 {% load crispy_forms_filters %}
-
 {% load static %}
 {% load crispy_forms_tags %}
 {#{% load socialaccount %}#}
 {% block title %}Login{% endblock title %}
 {% block content %}
-
-    <div class="account-pages my-5 pt-sm-5">
+    <div class="account-pages pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
@@ -35,14 +33,12 @@
                                             </span>
                                     </div>
                                 </a>
-
                                 <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-light">
                                                 <img src="{% static 'images/logo.svg' %}" alt="" class="rounded-circle"
                                                      height="34">
                                             </span>
                                 </div>
-
                             </div>
                             <div class="p-2">
                                 <form class="form-horizontal" action="{% url 'account_login' %}" method="POST"
@@ -53,43 +49,29 @@
                                             <strong>{{ message }}</strong>
                                         </div>
                                     {% endfor %}
-
                                     {{ form|crispy }}
-
                                     <div class="mt-3 d-grid">
                                         <button class="btn btn-primary waves-effect waves-light" type="submit">Log In
                                         </button>
                                     </div>
                                     <div>
-
                                     </div>
-
-
                                     <div class="mt-4 text-center">
                                         <a href="{% url 'account_reset_password' %}" class="text-muted"><i
                                                 class="mdi mdi-lock me-1"></i> Forgot your password?</a>
                                     </div>
                                 </form>
                             </div>
-
                         </div>
                     </div>
-                    <div class="mt-4 text-center">
-
+                    <div class="mt-2 text-center">
                         <div>
                             <p>Don't have an account ? <a href="{% url 'account_signup' %}"
                                                           class="fw-medium text-primary"> Signup now </a></p>
-                            <p>©
-                                <script>document.write(new Date().getFullYear())</script>
-                                B4YI. Crafted with <i class="mdi mdi-cryengine text-success"></i> by Cryptus
-                            </p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
     </div>
-    <!-- end account-pages -->
-
 {% endblock content %}
