--- a/templates/account/logout-success.html
+++ b/templates/account/logout-success.html
@@ -5,7 +5,7 @@
 {% block title %}Signed out{% endblock title %}
 {% block content %}
 
-    <div class="account-pages my-5 pt-sm-5">
+    <div class="account-pages pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
@@ -15,7 +15,6 @@
                                 <div class="col-7">
                                     <div class="text-primary p-4">
                                         <h5 class="text-primary">Signed out</h5>
-
                                     </div>
                                 </div>
                                 <div class="col-5 align-self-end">
@@ -33,7 +32,6 @@
                                             </span>
                                     </div>
                                 </a>
-
                                 <a href="{% url 'account_login' %}" class="auth-logo-dark">
                                     <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-soft">
@@ -63,18 +61,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="mt-5 text-center">
-                        <div>
-                            <p>©
-                                <script>document.write(new Date().getFullYear())</script>
-                                Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand
-                            </p>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
-    <!-- end account-pages -->
+
 {% endblock content %}
