--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,11 +1,9 @@
 {% extends './base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-
 {% block title %}Change Password{% endblock title %}
 {% block content %}
-
-    <div class="account-pages my-5 pt-sm-5">
+    <div class="account-pages pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
@@ -33,7 +31,6 @@
                                             </span>
                                     </div>
                                 </a>
-
                                 <a href="{% url 'dashboard' %}" class="auth-logo-dark">
                                     <div class="avatar-md profile-user-wid mb-4">
                                             <span class="avatar-title rounded-circle bg-light">
@@ -52,34 +49,20 @@
                                             <strong>{{ message }}</strong>
                                         </div>
                                     {% endfor %}
-
                                     {{ form|crispy }}
-
                                     <div class="mt-3 d-grid">
                                         <button class="btn btn-primary waves-effect waves-light" type="submit">Change
                                             Password
                                         </button>
                                     </div>
                                     <div>
-
                                     </div>
                                 </form>
                             </div>
-
                         </div>
                     </div>
-                    <div class="text-center">
-                        <div>
-                            <p>©
-                                <script>document.write(new Date().getFullYear())</script>
-                                Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand
-                            </p>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
-    <!-- end account-pages -->
 {% endblock content %}
