--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -3,9 +3,7 @@
 {% load crispy_forms_tags %}
 {% block title %}Reset Password{% endblock title %}
 {% block content %}
-
-
-    <div class="account-pages my-5 pt-sm-5">
+    <div class="account-pages pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
@@ -15,7 +13,6 @@
                                 <div class="col-7">
                                     <div class="text-primary p-4">
                                         <h5 class="text-primary"> Reset Password</h5>
-                                        <p>Reset Password with Skote.</p>
                                     </div>
                                 </div>
                                 <div class="col-5 align-self-end">
@@ -34,7 +31,6 @@
                                     </div>
                                 </a>
                             </div>
-
                             <div class="p-2">
                                 <div class="alert alert-success text-center mb-4" role="alert">
                                     Enter your e-mail address below, and we'll send you an e-mail allowing you to reset
@@ -50,27 +46,15 @@
                                     <div class="mb-3">
                                         {{ form.email|as_crispy_field }}
                                     </div>
-
                                     <div class="d-grid">
                                         <button class="btn btn-primary w-md waves-effect waves-light" type="submit">
                                             Reset My Password
                                         </button>
                                     </div>
-
                                 </form>
                             </div>
-
                         </div>
                     </div>
-                    <div class="mt-5 text-center">
-                        <p>Remember It ? <a href="{% url 'account_login' %}" class="fw-medium text-primary"> Sign In
-                            here</a></p>
-                        <p>©
-                            <script>document.write(new Date().getFullYear())</script>
-                            Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand
-                        </p>
-                    </div>
-
                 </div>
             </div>
         </div>
