--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,11 +1,9 @@
 {% extends './base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-
 {% block title %}Register{% endblock title %}
 {% block content %}
-
-    <div class="account-pages my-5 pt-sm-5">
+    <div class="account-pages pt-sm-5">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 col-lg-6 col-xl-5">
@@ -15,7 +13,6 @@
                                 <div class="col-7">
                                     <div class="text-primary p-4">
                                         <h5 class="text-primary">Free Register</h5>
-                                        <p>Get your free Skote account now.</p>
                                     </div>
                                 </div>
                                 <div class="col-5 align-self-end">
@@ -61,26 +58,17 @@
                                             Register
                                         </button>
                                     </div>
-
                                     <div class="mt-4 text-center">
-                                        <p class="mb-0">By registering you agree to the Skote <a href="#"
-                                                                                                 class="text-primary">Terms
-                                            of Use</a></p>
                                     </div>
                                 </form>
                             </div>
 
                         </div>
                     </div>
-                    <div class="mt-5 text-center">
-
+                    <div class="text-center">
                         <div>
                             <p>Already have an account ? <a href="{% url 'account_login' %}"
                                                             class="fw-medium text-primary"> Login</a></p>
-                            <p>©
-                                <script>document.write(new Date().getFullYear())</script>
-                                Skote. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand
-                            </p>
                         </div>
                     </div>
 
